# paper2skills-cli

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/paper2skills/: __init__.py  __main__.py  auth.py  cli.py  config.py  profiles.py
src/paper2skills/evaluate/: __init__.py  evaluator.py  merger.py  prompts.py
src/paper2skills/generate/: __init__.py  generator.py  prompts.py
src/paper2skills/ingest/: __init__.py  arxiv_fetch.py  doi.py  pdf.py  router.py  text.py
src/paper2skills/output/: __init__.py  base.py  json_fmt.py  markdown_fmt.py  opencode.py  yaml_fmt.py
src/paper2skills/providers/: base.py  copilot.py  github.py  litellm_provider.py  openai_provider.py
tests/: test_batch.py  test_config.py  test_doi_enhanced.py  test_formats.py  test_generator.py  test_ingest.py  test_merger.py  test_opencode.py  test_profiles.py  test_prompts.py
